# discord-bot-eternal-dice

./: .gitignore  Makefile  app_config.json.sample  package-lock.json  package.json
.github/workflows/: main.yml  pull-requests.yml
discord_bot_eternal_dice/: pyproject.toml  serverless.yml
discord_bot_eternal_dice/discord_bot_eternal_dice/: discord_messaging.py  handler.py  injector.py
discord_bot_eternal_dice/discord_bot_eternal_dice/api/: api_authorizer.py  discord_event_handler.py  router.py
discord_bot_eternal_dice/discord_bot_eternal_dice/model/: dice_roll.py  discord_command.py  discord_embed.py  discord_event.py  discord_member.py  discord_response.py  discord_route.py
discord_bot_eternal_dice/discord_bot_eternal_dice/routes/: ping.py  roll.py
discord_bot_eternal_dice/discord_bot_eternal_dice/util/: app_config.py  dice_roller.py  message_provider.py
discord_bot_eternal_dice/tests/integration/: conftest.py  test_int_ping.py  test_integration_bad_commands.py  test_integration_roll_numbers.py  utilities.py
discord_bot_eternal_dice/tests/unit/api/: test_api_authorizer.py  test_discord_event_handler.py  test_router.py
discord_bot_eternal_dice/tests/unit/model/: test_discord_event.py
discord_bot_eternal_dice/tests/unit/routes/: test_ping.py  test_roll.py
discord_bot_eternal_dice/tests/unit/util/: test_dice_roller.py
error_handler/: serverless.yml
infra/: app.py  pyproject.toml  setup.py
infra/eternal_dice_infra/: discord_slash_commands.py  infra_stack.py
